design bugs for dark mode

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -32,6 +32,11 @@ input {
   outline: none;
   border: none;
 }
+
+p {
+  margin: 0px;
+}
+
 .MuiPopover-paper {
   border: 0px !important;
   border-radius: 16px !important;
